// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`automotora sin cambios: los textos de antes de R17b > agenda 1`] = `
[
  "Calendario",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Filtros",
  "Sucursal",
  "[placeholder] Elegir sucursal…",
  "Recurso",
  "[placeholder] Todos",
  "Día anterior",
  "Fecha",
  "Día siguiente",
  "Hoy",
  "Lucía Ejemplo",
  "00:00",
  "01:00",
  "02:00",
  "03:00",
  "04:00",
  "05:00",
  "06:00",
  "07:00",
  "08:00",
  "09:00",
  "10:00",
  "11:00",
  "12:00",
  "13:00",
  "14:00",
  "15:00",
  "16:00",
  "17:00",
  "18:00",
  "19:00",
  "20:00",
  "21:00",
  "22:00",
  "23:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 10:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 10:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 11:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 11:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 12:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 12:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 13:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 13:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 14:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 14:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 15:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 15:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 16:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 16:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 17:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 17:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 18:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 18:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 19:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 19:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 20:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 20:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 21:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 21:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 22:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 22:30",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 23:00",
  "[aria-label] Forzar reserva de Lucía Ejemplo a las 23:30",
  "09:00",
  "–",
  "09:30",
  "Juana Pérez",
  "·",
  "Consulta",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > agente nuevo 1`] = `
[
  "Nuevo agente",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Datos del agente",
  "Nombre",
  "Sucursal",
  "[placeholder] Elegir sucursal…",
  "Objetivo",
  "Tono",
  "[placeholder] formal, cercano…",
  "Resumen para esta pantalla; el agente lee las instrucciones.",
  "Avisar al cliente si nadie responde en (minutos)",
  "[placeholder] Sin aviso",
  "Vacío o 0: no se avisa.",
  "Mensaje cuando no hay nadie disponible",
  "[placeholder] Por el momento no hay nadie del equipo disponible. Te vamos a contactar más tarde. Mientras tanto, si querés, puedo seguir ayudándote.",
  "Le llega al cliente. No escribas el horario: se agrega solo.",
  "Activo",
  "Instrucciones",
  "Instrucciones",
  "Lo que el agente lee antes de cada conversación.",
  "Modelo",
  "Proveedor",
  "Modelo",
  "[placeholder] El de la plataforma",
  "Lo elige el equipo de la plataforma.",
  "Capacidades",
  "Acciones habilitadas",
  "Ninguna",
  "Canales",
  "Ninguno",
  "Sin canales, el agente no atiende por ningún lado.",
  "ID del número de WhatsApp",
  "[placeholder] Sin número asignado",
  "Lo asigna el equipo de la plataforma.",
  "Reglas del agente",
  "Reglas del agente",
  "[placeholder] Ej.: No canceles ni cambies el estado de una oportunidad a ganada sin que un humano lo confirme. No modifiques el email ni el teléfono de un contacto. Antes de reservar un turno, asegurate de tener el nombre y el teléfono del cliente.",
  "El sistema las hace cumplir antes de cada acción.",
  "Los campos con asterisco (*) son obligatorios.",
  "Guardar",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > agentes 1`] = `
[
  "Agentes de IA",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Nuevo agente",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por nombre",
  "Sucursal",
  "[placeholder] Todas",
  "Estado",
  "[placeholder] Todos",
  "Ordenar por",
  "Orden",
  "Nombre",
  "Sucursal",
  "Estado",
  "Canales",
  "Modelo",
  "Acciones",
  "Asistente de ventas",
  "Casa Central",
  "Activo",
  "Web",
  "OpenRouter",
  "·",
  "openai/gpt-4o-mini",
  "[aria-label] Más acciones",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > automatizaciones 1`] = `
[
  "Automatizaciones",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Nueva automatización",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por nombre",
  "Estado",
  "[placeholder] Todas",
  "Ordenar por",
  "Orden",
  "Nombre",
  "Cuándo",
  "Qué hace",
  "Estado de la regla",
  "Aprobación de WhatsApp",
  "Acciones",
  "Seguimiento post-venta",
  "Oportunidad ganada",
  "Crear actividad de seguimiento",
  "Activa",
  "—",
  "[aria-label] Más acciones",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > automatización nueva 1`] = `
[
  "Nueva automatización",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Datos de la automatización",
  "Nombre",
  "[placeholder] Seguimiento post-venta",
  "Activa",
  "Desactivada, deja de ejecutarse sin borrarse.",
  "Cuándo se ejecuta",
  "Evento",
  "Qué hace",
  "Acción",
  "Título de la tarea",
  "[placeholder] Llamar para coordinar la entrega",
  "Vence en (días)",
  "Notas",
  "Asignada al dueño de la oportunidad; vence a los días indicados (",
  "0",
  "a",
  "365",
  ").",
  "Los campos con asterisco (*) son obligatorios.",
  "Guardar",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > base de conocimiento 1`] = `
[
  "Base de conocimiento",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Sincronizar stock",
  "Nueva entrada",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por título",
  "Sucursal",
  "[placeholder] Todas",
  "Estado",
  "[placeholder] Todas",
  "Ordenar por",
  "Orden",
  "Elegí una sucursal para sincronizar su stock.",
  "[aria-label] Seleccionar todas las de esta página",
  "Título",
  "Sucursal",
  "Estado",
  "Acciones",
  "[aria-label] Seleccionar la entrada "Horarios de atención"",
  "Horarios de atención",
  "Casa Central",
  "Activa",
  "[aria-label] Más acciones",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > consultas sin identificar 1`] = `
[
  "Contactos",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Nuevo contacto",
  "[aria-label] Vistas de contactos",
  "Clientes",
  "Consultas sin identificar",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por nombre, email o teléfono",
  "Canal",
  "[placeholder] Todos",
  "Vendedor",
  "[placeholder] Todos",
  "Consulta",
  "Canal",
  "Último mensaje",
  "Escribió",
  "Vehículo de interés",
  "Vendedor",
  "Acciones",
  "[title] Juana Pérez",
  "JP",
  "Juana Pérez",
  "—",
  "—",
  "—",
  "—",
  "[title] Ana Pérez",
  "AP",
  "Ana Pérez",
  "[aria-label] Más acciones de Juana Pérez",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > contacto nuevo 1`] = `
[
  "Nuevo contacto",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Datos del contacto",
  "Nombre",
  "Apellido",
  "Email",
  "Teléfono",
  "Puesto",
  "Empresa",
  "[placeholder] Buscar por nombre…",
  "Fuente",
  "Etapa",
  "Asignado",
  "Los campos con asterisco (*) son obligatorios.",
  "Guardar",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > contactos 1`] = `
[
  "Contactos",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Nuevo contacto",
  "[aria-label] Vistas de contactos",
  "Clientes",
  "Consultas sin identificar",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por nombre o email",
  "Etapa",
  "[placeholder] Todas",
  "Empresa",
  "[placeholder] Buscar por nombre…",
  "Ordenar por",
  "Orden",
  "Nombre",
  "Empresa",
  "Email",
  "Teléfono",
  "Etapa",
  "Origen",
  "Asignado",
  "Acciones",
  "[title] Juana Pérez",
  "JP",
  "Juana Pérez",
  "juana@example.com",
  "Cliente",
  "[title] Ana Pérez",
  "AP",
  "Ana Pérez",
  "[aria-label] Más acciones",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > conversaciones 1`] = `
[
  "Conversaciones",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por contacto",
  "Estado",
  "[placeholder] Todos",
  "Canal",
  "[placeholder] Todos",
  "Sucursal",
  "[placeholder] Todas",
  "Agente",
  "[placeholder] Todos",
  "Contacto",
  "Canal",
  "Estado",
  "Sucursal",
  "Agente",
  "Último mensaje",
  "Ana",
  "Pérez",
  "WhatsApp",
  "Activa",
  "[title] Centro",
  "Centro",
  "[title] Vera",
  "Vera",
  "[title] 3/3/2026, 7:00:00 a. m.",
  "3/3 07:00",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > conversación 1`] = `
[
  "Conversaciones",
  "Conversación",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Datos de la conversación",
  "Contacto",
  "Ana Pérez",
  "Canal",
  "WhatsApp",
  "Estado",
  "Activa",
  "Sucursal",
  "Centro",
  "Agente",
  "Vera",
  "Inicio",
  "3/3/2026, 6:00:00 a. m.",
  "Último mensaje",
  "3/3/2026, 7:00:00 a. m.",
  "Crear cupón",
  "Cerrar conversación",
  "Resumen",
  "Esta conversación todavía no tiene un resumen. Generalo para ver de qué se trata sin leer el hilo entero.",
  "Generar resumen",
  "Mensajes",
  "[aria-label] Mensajes de la conversación",
  "Ana Pérez",
  "·",
  "3/3/2026, 6:58:00 a. m.",
  "Hola, quiero saber el precio",
  "Responder",
  "Mensaje para el cliente",
  "[placeholder] Escribí tu respuesta…",
  "Sale por WhatsApp desde el número del negocio.",
  "Mientras atiendas vos, el agente no responde.",
  "Podés escribir texto libre hasta el 31/12/2998, 9:00:00 p. m..",
  "Enviar",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > dashboard 1`] = `
[
  "Dashboard",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "[aria-label] Período",
  "Mensual",
  "Semanal",
  "Diario",
  "[aria-label] Resumen de stock",
  "Unidades en stock",
  "0",
  "Disponibles",
  "0",
  "[aria-label] Resumen comercial",
  "Oportunidades creadas este mes",
  "5",
  "+2 vs. mes anterior",
  "Ganado este mes",
  "3000.00 USD",
  "+100% vs. mes anterior",
  "Tasa de cierre del mes",
  "50%",
  "0 pts vs. mes anterior",
  "[aria-label] Ingresos ganados por mes",
  "Ingresos ganados por mes",
  "Ingresos ganados por mes",
  "Mes",
  "Ingresos",
  "2025-10",
  "100.00 USD",
  "2025-11",
  "0.00 USD",
  "2025-12",
  "250.00 USD",
  "2026-01",
  "900.00 USD",
  "2026-02",
  "1500.00 USD",
  "2026-03",
  "3000.00 USD",
  "[aria-label] Oportunidades recientes",
  "Oportunidades recientes",
  "Todavía no hay oportunidades.",
  "[aria-label] Mayores oportunidades abiertas",
  "Mayores oportunidades abiertas",
  "No hay oportunidades abiertas en",
  "USD",
  ".",
  "[aria-label] Proceso de venta",
  "Proceso de venta",
  "No hay un proceso de venta configurado como predeterminado.",
  "[aria-label] Actividad reciente",
  "Actividad reciente",
  "Tarea",
  "Llamar a Juana",
  "—",
  "·",
  "por Vos",
  "31/12/2025, 9:00:00 p. m.",
  "[aria-label] Acciones rápidas",
  "Acciones rápidas",
  "Nueva empresa",
  "Nuevo contacto",
  "Nueva oportunidad",
  "Nueva actividad",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > ficha de contacto 1`] = `
[
  "Editar contacto",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Crear cupón",
  "Marcar sin interés",
  "Unir con otro contacto",
  "Datos del contacto",
  "Nombre",
  "Apellido",
  "Email",
  "Teléfono",
  "Puesto",
  "Empresa",
  "[placeholder] Buscar por nombre…",
  "Fuente",
  "Etapa",
  "Asignado",
  "Vehículo de interés",
  "[placeholder] Buscar disponible por marca, modelo, patente, VIN o código…",
  "No la reserva: sigue disponible para otros.",
  "Los campos con asterisco (*) son obligatorios.",
  "Guardar",
  "Cupones",
  "Este contacto todavía no tiene cupones.",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > menú 1`] = `
[
  "Plataforma CRM",
  "Dashboard",
  "Agente interno",
  "Canjear cupón",
  "CRM",
  "Contactos",
  "Conversaciones",
  "Empresas",
  "Oportunidades",
  "Procesos de venta",
  "Stock",
  "Actividades",
  "Actividades",
  "Mis tareas",
  "Reservas",
  "Calendario",
  "Recursos",
  "Tipos de servicio",
  "Administración",
  "QR",
  "Usuarios",
  "Invitaciones",
  "Fuentes de ingesta",
  "Claves de ingesta",
  "Eventos de ingesta",
  "Organización",
  "Sucursales",
  "Campos de contacto",
  "Agentes de IA",
  "Base de conocimiento",
  "Automatizaciones",
  "Configurar agente interno",
  "Ayuda",
  "[aria-label] Tema",
  "[aria-label] Sistema",
  "[title] Sistema",
  "[aria-label] Claro",
  "[title] Claro",
  "[aria-label] Oscuro",
  "[title] Oscuro",
  "Ana Pérez",
  "Administrador",
  "Cerrar sesión",
  "[aria-label] Abrir menú",
  "Plataforma CRM",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > sucursal 1`] = `
[
  "Editar sucursal",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Datos de la sucursal",
  "Nombre",
  "Zona horaria",
  "Vendedor por defecto",
  "[placeholder] Sin vendedor por defecto",
  "A quien el agente asigna los contactos sin vendedor.",
  "Cobro",
  "Link de pago",
  "[placeholder] https://",
  "Datos para transferencia",
  "El agente se los comparte al cliente que quiere pagar.",
  "Horario de atención",
  "Los mensajes automáticos solo salen dentro de este horario.",
  "Lunes",
  "No atiende.",
  "[aria-label] Agregar una franja al Lunes",
  "Agregar franja",
  "Martes",
  "No atiende.",
  "[aria-label] Agregar una franja al Martes",
  "Agregar franja",
  "Miércoles",
  "No atiende.",
  "[aria-label] Agregar una franja al Miércoles",
  "Agregar franja",
  "Jueves",
  "No atiende.",
  "[aria-label] Agregar una franja al Jueves",
  "Agregar franja",
  "Viernes",
  "No atiende.",
  "[aria-label] Agregar una franja al Viernes",
  "Agregar franja",
  "Sábado",
  "No atiende.",
  "[aria-label] Agregar una franja al Sábado",
  "Agregar franja",
  "Domingo",
  "No atiende.",
  "[aria-label] Agregar una franja al Domingo",
  "Agregar franja",
  "Guardar horario",
  "Volver al horario por defecto",
  "Google Calendar",
  "Las reservas se reflejan en ese calendario y sus eventos ocupan horarios.",
  "Sin conectar",
  "Conectar con Google Calendar",
  "Los campos con asterisco (*) son obligatorios.",
  "Guardar",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > sucursales 1`] = `
[
  "Sucursales",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Nueva sucursal",
  "Filtros",
  "Buscar",
  "[placeholder] Buscar por nombre",
  "Ordenar por",
  "Orden",
  "Nombre",
  "Zona horaria",
  "Acciones",
  "Casa Central",
  "America/Montevideo",
  "[aria-label] Más acciones",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;

exports[`automotora sin cambios: los textos de antes de R17b > turnos 1`] = `
[
  "Reservas",
  "[aria-label] Ayuda de esta pantalla",
  "[title] Ayuda de esta pantalla",
  "Filtros",
  "Sucursal",
  "[placeholder] Todas",
  "Recurso",
  "[placeholder] Todos",
  "Tipo de servicio",
  "[placeholder] Todos",
  "Estado",
  "[placeholder] Todos",
  "Desde",
  "Hasta",
  "Ordenar por",
  "Orden",
  "Turno",
  "Contacto",
  "Servicio",
  "Recurso",
  "Sucursal",
  "Estado",
  "Acciones",
  "mar 22/09/2026, 09:00–09:30",
  "Juana Pérez",
  "Consulta",
  "Lucía Ejemplo",
  "Casa Central",
  "Confirmada",
  "Cancelar",
  "Anterior",
  "Página",
  "1",
  "de",
  "1",
  "Siguiente",
]
`;
